--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <img class="header__logo" src="images/header-logo.svg" alt="иконка с картой России">
       <ul class="header__lang-links">
         <li class="header__lang-name">
-          <a class="lang-link lang-link_active_ru" href="#" target="_self">Ru</a>
+          <a class="header__lang-link header__lang-link_active" href="#" target="_self">Ru</a>
         </li>
         <li class="header__lang-name">
-          <a class="lang-link lang-link_active_en" href="#" target="_self">En</a>
+          <a class="header__lang-link" href="#" target="_self">En</a>
         </li>
       </ul>
     </header>
@@ -185,8 +185,9 @@
       <section class="cover">
         <a class="cover__title-link page__background" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе &#8212; путешествие от столицы до Байкала на
-            электричках</p>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе &mdash;
+            путешествие от&nbsp;столицы до&nbsp;Байкала
+            на&nbsp;электричках</p>
         </a>
       </section>
     </main>
